ci: ignore new options on JDK8